2004-02-24  Mike Kestner  <mkestner@ximian.com>

	* pango/AttrIterator.custom : manually implement SList method.
	* pango/GlyphItem.custom : manually implement SList method.
	* pango/Layout.custom : manually implement SList method.
	* pango/Pango.metadata : hide some SList methods.
	* pango/pango-api.xml : regen.

2004-02-23  Mike Kestner  <mkestner@ximian.com>

	* pango/Pango.metadata : mark some out params on Layout.
	* pango/pango-api.xml : regen
	[fixes #54720]

2004-02-23  Thiago Milczarek Sayão  <sayao@brturbo.com>

	* gtk/TextBuffer.custom : add TextIter parm to InsertWithTags method.

2004-02-21  Mike Kestner  <mkestner@ximian.com>

	* pango/Pango.metadata : mark some out params on Layout.
	* pango/pango-api.xml : regen
	[fixes #54696]

2004-02-21  Mike Kestner  <mkestner@ximian.com>

	* pango/Pango.metadata : mark some out params on ParseMarkup.
	* pango/pango-api.xml : regen
	[fixes #54695]

2004-02-20  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : hide NoExpose, Client, Setting, WindowState, 
	and Proximity events.
	* gdk/EventClient.cs : glue-based manual implementation.
	* gdk/EventClient.custom : kill
	* gdk/EventNoExpose.custom : kill
	* gdk/EventProximity.cs : glue-based manual implementation.
	* gdk/EventProximity.custom : kill
	* gdk/EventSetting.cs : glue-based manual implementation.
	* gdk/EventSetting.custom : kill
	* gdk/EventWindowState.cs : glue-based manual implementation.
	* gdk/EventWindowState.custom : kill
	* gdk/gdk-api.xml : regen
	* gdk/gdk-symbols.xml : manual mappings.
	* glue/event.cs : expose event struct fields.
	* gtk/Application.cs : simplify CurrentEvent prop.

2004-02-20  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : hide Property, Selection, and DND events
	* gdk/EventDND.cs : glue-based manual implementation.
	* gdk/EventDND.custom : kill
	* gdk/EventProperty.cs : glue-based manual implementation.
	* gdk/EventProperty.custom : kill
	* gdk/EventSelection.cs : glue-based manual implementation.