@@ -6,7 +6,7 @@
 // 2002 (C) Copyright, Ximian, Inc.
 //
 
-namespace GtkSharp {
+namespace Gnome {
 
 	using System;
 
