@@ -1,3 +1,9 @@
+2004-02-26  Mike Kestner  <mkestner@ximian.com>
+
+	* gnome/GtkSharp.* : move to Gnome namespace
+	* gnome/CanvasProxy.cs : update event handler namespaces
+	* gnome/voidObject*.cs : internalize
+
 2004-02-24  Mike Kestner  <mkestner@ximian.com>
 
 	* pango/AttrIterator.custom : manually implement SList method.
